--- a/frontend/src/components/Configuracion.css
+++ b/frontend/src/components/Configuracion.css
@@ -20,11 +20,59 @@
   }
   
   .section h2 {
-    margin-bottom: 10px;
-    font-size: 1.5em;
-    text-align: center;
+    font-weight: bold; /* Negrita para el título */
+    text-align: center; /* Opcional: centra el texto */
   }
   
+  /* Centrar botón */
+  .button-center {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+  }
+  
+  /* Botón activado (verde) */
+  .button-active {
+    background-color: #28a745;
+    color: white;
+    border: none;
+    padding: 15px 30px; /* Botón más grande */
+    font-size: 18px;
+    border-radius: 50px; /* Bordes redondeados */
+    cursor: pointer;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease, transform 0.2s ease;
+  }
+  
+  /* Botón desactivado (rojo) */
+  .button-inactive {
+    background-color: #dc3545;
+    color: white;
+    border: none;
+    padding: 15px 30px; /* Botón más grande */
+    font-size: 18px;
+    border-radius: 50px; /* Bordes redondeados */
+    cursor: pointer;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease, transform 0.2s ease;
+  }
+  
+  /* Efecto hover */
+  .button-active:hover, .button-inactive:hover {
+    transform: translateY(-3px);
+  }
+  
+  /* Cambiar el color de fondo cuando se presiona el botón */
+  .button-active:active, .button-inactive:active {
+    background-color: #218838; /* Verde oscuro para botón activo */
+    transform: translateY(1px);
+  }
+  
+  .button-inactive:active {
+    background-color: #c82333; /* Rojo oscuro para botón inactivo */
+  }
+  
+  /* Formato de grupo de formularios */
   .form-group {
     display: flex;
     flex-direction: column;
@@ -49,6 +97,7 @@
     padding: 5px;
   }
   
+  /* Botones estándar */
   .button {
     padding: 10px 15px;
     font-size: 1em;
